# scapix-test

./: CMakeLists.txt  CMakePresets.json
src/: lib.h
ui/: app.py
